deploy/infra/istio_rules/istio/peerauth-minio-console-permissive.yaml
apiVersion: security.istio.io/v1beta1
kind: PeerAuthentication
metadata:
  name: minio-mtls-strict-with-console-permissive
  namespace: pompetrack-core
spec:
  selector:
    matchLabels:
      app: minio
  mtls:
    mode: STRICT
  portLevelMtls:
    "9001":
      mode: PERMISSIVE
